--- a/Lesson04-rates.html
+++ b/Lesson04-rates.html
@@ -45,24 +45,20 @@
 
 
         <article>
-                      <h3>KITTIES TO GO</h3>
+                      <h3>KITTIES RATES RATES in head3</h3>
                         <p>
-                        It is a long established fact that a reader will be distracted by
-                           the readable content of a page when looking at its layout.
-                          he point of using Lorem Ipsum is that it has a more-or-less normal
-                          It is a long established fact that a reader will be distracted by
-                             the readable content of a page when looking at its layout.
-                            he point of using Lorem Ipsum is that it has a more-or-less normal
-                            he point of using Lorem Ipsum is that it has a more-or-less normal
+                        kitties rates kitties rateskitties rateskitties rates
+                        kitties rates kitties rateskitties rateskitties rates
                         </p>
 
                         <p>
                         </p>
 
-                       <p>It is a long established fact that a reader will be distracted by
-                         the readable content of a page when looking at its layout.
-                        he point of using Lorem Ipsum is that it has a more-or-less normal
-                        he point of using Lorem Ipsum is that it has a more-or-less normal
+                       <p>kitties rates kitties rateskitties rateskitties ratesal
+                         kitties rates kitties rateskitties rateskitties rates
+                         kitties rates kitties rateskitties rateskitties rates
+                         kitties rates kitties rateskitties rateskitties rates
+                         kitties rates kitties rateskitties rateskitties rates
                        </p>
 
           </article>
