--- a/lesson04-liability.html
+++ b/lesson04-liability.html
@@ -35,7 +35,7 @@
 
 
               <p>
-                this page for liability release
+                This page for liability release
               </p>
 
         </article>
@@ -47,25 +47,20 @@
 
 
         <article>
-                      <h3>KITTIES TO GO</h3>
+                      <h3>LIABILITY RELEASE heading 3</h3>
                         <p>
-                        It is a long established fact that a reader will be distracted by
-                           the readable content of a page when looking at its layout.
-                          he point of using Lorem Ipsum is that it has a more-or-less normal
-                          It is a long established fact that a reader will be distracted by
-                             the readable content of a page when looking at its layout.
-                            he point of using Lorem Ipsum is that it has a more-or-less normal
-                            he point of using Lorem Ipsum is that it has a more-or-less normal
+                        liabilities liabilities liabilitiesliabilities liabilities liabilities
+                        liabilities liabilities liabilitiesliabilities liabilities liabilities
                         </p>
 
                         <p>
                         </p>
 
-                       <p>It is a long established fact that a reader will be distracted by
-                         the readable content of a page when looking at its layout.
-                        he point of using Lorem Ipsum is that it has a more-or-less normal
-                        he point of using Lorem Ipsum is that it has a more-or-less normal
-                       </p>
+                       <p>liabilities liabilities liabilitiesliabilities liabilities liabilities
+                       liabilities liabilities liabilitiesliabilities liabilities liabilities
+                       liabilities liabilities liabilitiesliabilities liabilities liabilities
+                       liabilities liabilities liabilitiesliabilities liabilities liabilities
+                        </p>
 
           </article>
 
