update Lesson04-assignment.htm as first MOCK page

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -2,14 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lesson04-Assignment-MOCKUP</title>
+    <title>Lesson04-rates.HTML</title>
      <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
+
+     </head>
     <header>
             <h1>KITTIES TO GO!</h1>
-            <h3>Seattle's premier drive-thru cat rentals</h3>
+            <h3>---- RATES ----</h3>
     </header>
           <nav>
-            <a href="#" target="_blank">About   /</a>
+            <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
             <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
             <a href="lesson04-liability.html" target="lesson04-liability.html">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
@@ -17,60 +19,45 @@
           </nav>
 
 
-    <style>
 
 
-     </style>
+     <section>
+       <h3> there supposed to be a header after section</h3>
+          <article>
+                   <h4>RATE  h4 rate h4 </h4>
+                  <p> Lorem Ipsum is simply dummy text of the printing
+                    and typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s, when an unknown printer
+                     took a galley of type and scrambled it to make a type specimen book. </p>
+          </article>
+          Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been the industry's
+            standard dummy text ever since the 1500s, when an unknown printer
+             took a galley of type and scrambled it to make a type specimen book
 
-  </head>
+           <article>
+           <h5>
 
-
-  <body>
-
-
-
-       <section>
-        <article>
-          <h4>It is a long established fact that a reader will be distracted
-            tof a page when looking at its layout. </h4>
-
-
-              <p>
-                he point of using Lorem Ipsum is that it has a more-or-less normal distribution
-                 of letters, as opposed to using 'Content here, content here', making it look like
-                  readable English. Many desktop publishing packages and web page editors.
-              </p>
-
-        </article>
-
-           <h5><br>
-              <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution
-               of letters,<br>
 
            &mdash; erlbuenbrazo
-         </p>
             </h5>
+           </article>
 
-
-        <article>
-                      <h3>KITTIES TO GO</h3>
+          <article>
+                      <h3>KITTIES RATES RATES in head3</h3>
                         <p>
-                        It is a long established fact that a reader will be distracted by
-                           the readable content of a page when looking at its layout.
-                          he point of using Lorem Ipsum is that it has a more-or-less normal
-                          It is a long established fact that a reader will be distracted by
-                             the readable content of a page when looking at its layout.
-                            he point of using Lorem Ipsum is that it has a more-or-less normal
-                            he point of using Lorem Ipsum is that it has a more-or-less normal
+                        kitties rates kitties rateskitties rateskitties rates
+                        kitties rates kitties rateskitties rateskitties rates
                         </p>
 
                         <p>
                         </p>
 
-                       <p>It is a long established fact that a reader will be distracted by
-                         the readable content of a page when looking at its layout.
-                        he point of using Lorem Ipsum is that it has a more-or-less normal
-                        he point of using Lorem Ipsum is that it has a more-or-less normal
+                       <p>kitties rates kitties rateskitties rateskitties ratesal
+                         kitties rates kitties rateskitties rateskitties rates
+                         kitties rates kitties rateskitties rateskitties rates
+                         kitties rates kitties rateskitties rateskitties rates
+                         kitties rates kitties rateskitties rateskitties rates
                        </p>
 
           </article>
@@ -84,32 +71,32 @@
               <p>
                 Cat buddies have no litter i live in luxury cat life.
               </p>
-               <a a href="#" target="_blank">Find out more >></a>
+               <a  href="#" target="_blank">Find out more >></a>
 
-           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
-"There is no one who loves pain itself, who seeks afte.</p>
+           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                 "There is no one who loves pain itself, who seeks afte.
+           </p>
 
-
-              <a a href="#" target="_blank">Find out more >></a>
+              <a  href="#" target="_blank">Find out more >></a>
 
               <h4>CAT OF THE WEEK</h4>
               <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
-              <p>
-                rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
-     "There is no one who loves pain itself, who seeks afte
-              </p>
-              <a a href="#" target="_blank">Book Now >></a>
+
+
+              <a  href="#" target="_blank">Book Now >></a>
               </article>
 
-    </sidebar>
+       </sidebar>
 
 
 
       <footer class="flip">
-  <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="mock5-cat-logo " />
+      <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="cat logo"  class="center">
+
+
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
 
-  </body>
+
 </html>
