--- a/Lesson04-rates.html
+++ b/Lesson04-rates.html
@@ -4,47 +4,42 @@
     <meta charset="utf-8">
     <title>Lesson04-rates.HTML</title>
      <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
+
+     </head>
     <header>
             <h1>KITTIES TO GO!</h1>
-            <h3>RATES RATES RATES RATES</h3>
+            <h3>---- RATES ----</h3>
     </header>
           <nav>
-            <a href="#" target="_blank">About   /</a>
+            <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
             <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
             <a href="lesson04-liability.html" target="lesson04-liability.html">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
             <a href="#" target="_blank">Book a Cat   /</a>
           </nav>
 
-  <style>
-
-  </style>
-
-  </head>
-
-  <body>
 
 
-       <section>
-        <article>
-          <h4>ou rates are super low low low low </h4>
+
+     <section>
+       <h2> there supposed to be a header after section</h2>
+          <article>
+                   <h4>RATE  h4 rate h4 </h4>
+                  <p> low low rate for cats age >1 </p>
+          </article>
 
 
-              <p>
-                low low rate for cats age >1 </p>
-
-        </article>
-
-           <h5><br>
-              <p>he point of using Lorem Ipsum is that it has a more-or-less normal distribution
-               of letters,<br>
+           <article>
+           <h5>
+              RATE RATES RATES RATE RATERATE RATES RATES RATE RATERATE RATES RATES RATE RATE
+              RATE RATES RATES RATE RATERATE RATES RATES RATE RATE
+               of letters
 
            &mdash; erlbuenbrazo
-         </p>
             </h5>
+           </article>
 
-
-        <article>
+          <article>
                       <h3>KITTIES RATES RATES in head3</h3>
                         <p>
                         kitties rates kitties rateskitties rateskitties rates
@@ -72,35 +67,32 @@
               <p>
                 Cat buddies have no litter i live in luxury cat life.
               </p>
-               <a a href="#" target="_blank">Find out more >></a>
+               <a  href="#" target="_blank">Find out more >></a>
 
-           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
-"There is no one who loves pain itself, who seeks afte.</p>
+           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                 "There is no one who loves pain itself, who seeks afte.
+           </p>
 
-
-              <a a href="#" target="_blank">Find out more >></a>
+              <a  href="#" target="_blank">Find out more >></a>
 
               <h4>CAT OF THE WEEK</h4>
               <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
 
-              <p>
-                rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
-     "There is no one who loves pain itself, who seeks afte
-              </p>
-              <a a href="#" target="_blank">Book Now >></a>
+
+              <a  href="#" target="_blank">Book Now >></a>
               </article>
 
-    </sidebar>
+       </sidebar>
 
 
 
       <footer class="flip">
-  <img src="IMAGES/lesson04-mock5-cat-logo.png"    clas="center">
+      <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="cat logo"  class="center">
 
 
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
 
-  </body>
+
 </html>
