--- a/lesson04-liability.html
+++ b/lesson04-liability.html
@@ -2,65 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lesson04-Assignment-MOCKUP</title>
+    <title>Lesson04-rates.HTML</title>
      <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
+
+     </head>
     <header>
             <h1>KITTIES TO GO!</h1>
-            <h3>Seattle's premier drive-thru cat rentals</h3>
+            <h3>---- RATES ----</h3>
     </header>
           <nav>
-            <a href="#" target="_blank">About   /</a>
+            <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
             <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
-            <a href="Lesson04-liability.html" target="Lesson04-liability.html">Liabiliity Release   /</a>
+            <a href="lesson04-liability.html" target="lesson04-liability.html">Liabiliity Release   /</a>
             <a href="#" target="_blank">Kitties Profiles   /</a>
             <a href="#" target="_blank">Book a Cat   /</a>
           </nav>
 
 
-    <style>
 
 
-     </style>
-
-  </head>
-
-
-  <body>
-
-
-
-       <section>
-        <article>
-          <h4>Liabiliity </h4>
+     <section>
+       <h2> there supposed to be a header after section</h2>
+          <article>
+                   <h4>RATE  h4 rate h4 </h4>
+                  <p> low low rate for cats age >1 </p>
+          </article>
 
 
-              <p>
-                This page for liability release
-              </p>
+           <article>
+           <h5>
+              Liabilities Liabilities Liabilities   Liabilities Liabilities Liabilities
+                Liabilities Liabilities Liabilities   Liabilities Liabilities Liabilities
+                Liabilities Liabilities Liabilities   Liabilities Liabilities Liabilities
 
-        </article>
-
-           <h5><br>
-              <p>liability release
-         </p>
+            &mdash;erlbuenbrazo
             </h5>
+           </article>
 
-
-        <article>
-                      <h3>LIABILITY RELEASE heading 3</h3>
+          <article>
+                      <h3>Liabilities in head3</h3>
                         <p>
-                        liabilities liabilities liabilitiesliabilities liabilities liabilities
-                        liabilities liabilities liabilitiesliabilities liabilities liabilities
+                        Liabilities Liabilities Liabilities   Liabilities Liabilities Liabilitie
                         </p>
 
                         <p>
                         </p>
 
-                       <p>liabilities liabilities liabilitiesliabilities liabilities liabilities
-                       liabilities liabilities liabilitiesliabilities liabilities liabilities
-                       liabilities liabilities liabilitiesliabilities liabilities liabilities
-                       liabilities liabilities liabilitiesliabilities liabilities liabilities
-                        </p>
+                       <p>Liabilities Liabilities Liabilities   Liabilities Liabilities Liabilities
+                         Liabilities Liabilities Liabilities   Liabilities Liabilities Liabilities
+                       </p>
 
           </article>
 
@@ -73,22 +63,19 @@
               <p>
                 Cat buddies have no litter i live in luxury cat life.
               </p>
-               <a a href="#" target="_blank">Find out more >></a>
+               <a  href="#" target="_blank">Find out more >></a>
 
-           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
-"There is no one who loves pain itself, who seeks afte.</p>
+           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
+                 "There is no one who loves pain itself, who seeks afte.
+           </p>
 
-
-              <a a href="#" target="_blank">Find out more >></a>
+              <a  href="#" target="_blank">Find out more >></a>
 
               <h4>CAT OF THE WEEK</h4>
-<img src="images/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
+              <img src="images/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
 
-              <p>
-                rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..." <break>
-     "There is no one who loves pain itself, who seeks afte
-              </p>
-              <a a href="#" target="_blank">Book Now >></a>
+
+              <a  href="#" target="_blank">Book Now >></a>
               </article>
 
     </sidebar>
@@ -96,10 +83,12 @@
 
 
       <footer class="flip">
-  <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="mock5-cat-logo " />
+  <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="cat logo"  class="center">
+
+
         <p>|assignment no4| erlbuenbrazo</p>
       </footer>
 
 
-  </body>
+
 </html>
