update Lesson04-assignment.html , one ERRO left re:SIDEBAR

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -8,7 +8,7 @@
      </head>
     <header>
             <h1>KITTIES TO GO!</h1>
-            <h3>---- RATES ----</h3>
+            <h3>Seattle's premier drive-thru cat rentals</h3>
     </header>
           <nav>
             <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
@@ -22,9 +22,10 @@
 
 
      <section>
-       <h3> there supposed to be a header after section</h3>
+       <h4>RATE  h4 rate h4 </h4>
+       <!-- <h3> there supposed to be a header after section</h3> -->
           <article>
-                   <h4>RATE  h4 rate h4 </h4>
+               <h3>   head 3  </h3>
                   <p> Lorem Ipsum is simply dummy text of the printing
                     and typesetting industry. Lorem Ipsum has been the industry's
                     standard dummy text ever since the 1500s, when an unknown printer
