update Lesson04-rates.html, one error left re: SIDEBAR

--- a/Lesson04-rates.html
+++ b/Lesson04-rates.html
@@ -22,10 +22,10 @@
 
 
      <section>
-       <h2> there supposed to be a header after section</h2>
-          <article>
-                   <h4>RATE  h4 rate h4 </h4>
-                  <p> low low rate for cats age >1 </p>
+      <h4>RATE  </h4>
+                <article>
+                  <h3>  LOW LOW RATE for CATS  </h3>
+              <!-- <p> low low rate for cats age >1 </p>-->
           </article>
 
 
@@ -60,7 +60,7 @@
 
       </section>
 
-
+<h4>head4 </h4>
       <sidebar>
             <article>
               <h4>CATS IN THE NEWS</h4>
