--- a/lesson04-liability.html
+++ b/lesson04-liability.html
@@ -8,7 +8,7 @@
      </head>
     <header>
             <h1>KITTIES TO GO!</h1>
-            <h3>---- RATES ----</h3>
+            <h3>Liabilities</h3>
     </header>
           <nav>
             <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
@@ -22,10 +22,10 @@
 
 
      <section>
-       <h2> there supposed to be a header after section</h2>
+      <h4>LIABILITIES </h4>
           <article>
-                   <h4>RATE  h4 rate h4 </h4>
-                  <p> low low rate for cats age >1 </p>
+           <h3>   Liabilities >1 </h3>
+
           </article>
 
 
