update title page

--- a/Lesson04-assignment.html
+++ b/Lesson04-assignment.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Lesson04-rates.HTML</title>
+    <title>Lesson04-assignment.HTML</title>
      <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
 
      </head>
