update lesson 2 with external font icon

--- a/Lesson02-Assignment.html
+++ b/Lesson02-Assignment.html
@@ -6,6 +6,12 @@
        <head>
             <meta charset="utf-8">
             <title>Lesson02-Assignment</title>
+            <!--external FONTAWESOME, paste it before any custom css-->
+
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css"
+             integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
             <link rel="stylesheet" type="text/css" href="STYLES/styles.css">
         </head>
 
@@ -13,8 +19,13 @@
 
         <header>
           <div class="a">
+
+
           <h1>Miko and Puggy's PAGE </h1>
-        </div>
+            <i class="fas fa-dog"></i>
+            <i class="fas fa-dog"></i>
+          </div>
+
 
 
           <div class="b">
