--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -7,9 +7,8 @@
 
      </head>
     <header>
-            <h1>external Fonts!</h1>
-            <h3>Seattle's premier drive-thru cat rentals</h3>
-    </header>
+            <h1>EXTERNAL FONTS!</h1>
+            <h3>Assignment No. 5</h3>
           <nav>
             <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
             <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
@@ -18,34 +17,36 @@
             <a href="#" target="_blank">Book a Cat   /</a>
           </nav>
 
-/*Incorporating Google Fonts and Font Awesome*/
+<!--Incorporating Google Fonts and Font Awesome
 
 <header> h1 {
   font-family:serif;
   }
 
 </header>
-/*End of incorporating Google fonts/Font awesome*/
+-->
 
 
      <section>
        <h4>RATE  h4 rate h4 </h4>
        <!-- <h3> there supposed to be a header after section</h3> -->
           <article>
+
                <h3>   head 3  </h3>
                   <p> Lorem Ipsum is simply dummy text of the printing
                     and typesetting industry. Lorem Ipsum has been the industry's
                     standard dummy text ever since the 1500s, when an unknown printer
-                     took a galley of type and scrambled it to make a type specimen book. </p>
+                     took a galley of type and scrambled it to make a type specimen book.
+                 </p>
           </article>
+
+
+          <article>
+          <h5>
           Lorem Ipsum is simply dummy text of the printing
             and typesetting industry. Lorem Ipsum has been the industry's
             standard dummy text ever since the 1500s, when an unknown printer
              took a galley of type and scrambled it to make a type specimen book
-
-           <article>
-           <h5>
-
 
            &mdash; erlbuenbrazo
             </h5>
@@ -72,7 +73,7 @@
 
       </section>
 
-<h3> **</h3>
+<h4>head 4</h4>
       <sidebar>
             <article>
               <h4>CATS IN THE NEWS</h4>
@@ -102,7 +103,7 @@
       <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="cat logo"  class="center">
 
 
-        <p>|assignment no4| erlbuenbrazo</p>
+        <p>|assignment no5| erlbuenbrazo</p>
       </footer>
 
 
