update assignment no 5

--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -3,78 +3,97 @@
   <head>
     <meta charset="utf-8">
     <title>Lesson05-assignment.HTML</title>
+
+
      <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
+
 
      </head>
     <header>
-            <h1>EXTERNAL FONTS!</h1>
-            <h3>Assignment No. 5</h3>
+            <h1>EXTERNAL FONTS</h1>
+            <h3>Assignment no. 5</h3>
+    </header>
           <nav>
-            <a href="Lesson04-assignment.html" target="Lesson04-assignment.html">About   /</a>
-            <a href="Lesson04-rates.html" target="Lesson04-rates.html">Rates  /</a>
-            <a href="lesson04-liability.html" target="lesson04-liability.html">Liabiliity Release   /</a>
-            <a href="#" target="_blank">Kitties Profiles   /</a>
-            <a href="#" target="_blank">Book a Cat   /</a>
+            <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>
+            <a href="#" target="_blank">Rates  /</a>
+            <a href="#" target="_blank">Liabiliity Release   /</a>
+            <a href="#" target="_blank">Doggies Profiles   /</a>
+            <a href="#" target="_blank">Book a Dog   /</a>
           </nav>
 
-<!--Incorporating Google Fonts and Font Awesome
 
-<header> h1 {
-  font-family:serif;
-  }
+<body>
 
-</header>
--->
+
+  <section class="container">
+
+    <br>
+
+    <div class="box">
+      <h1>One </h1>
+      <p> Lorem Ipsum is simply dummy text of the printing
+        and typesetting industry. Lorem Ipsum has been the industry's
+        <a  href="#" target="_blank">Book Now >></a>
+      </p>
+
+    </div>
+
+    <div class="box">
+        <h1>Two </h1>
+        <p> Lorem Ipsum is simply dummy text of the printing
+          and typesetting industry. Lorem Ipsum has been the industry's
+          Lorem Ipsum is simply dummy text of the printing
+          Lorem Ipsum is simply dummy text of the printing
+          <a  href="#" target="_blank">Book Now >></a>
+          </article>
+    </div>
+
+    <div class="box">
+        <h1>Three </h1>
+        <p> Lorem Ipsum is simply dummy text of the printing
+          and typesetting industry. Lorem Ipsum has been the industry's
+          Lorem Ipsum is simply dummy text of the printing
+          Lorem Ipsum is simply dummy text of the printing
+          <a  href="#" target="_blank">Book Now >></a>
+          </article>
+
+    </div>
+
+    <div class="box">
+        <h1>Four </h1>
+        <article>
+          <h4>DOG OF THE WEEK</h4>
+          <img src="IMAGES/about-us-two-dogs.jpg" style="width:80px;height:80px;border:0 alt="about Miko& PUggy" />
+          <p> Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been the industry's
+          </p>
+          <a  href="#" target="_blank">Book Now >></a>
+          </article>
+
+    </div>
+
+
+
+
+  </section>
+
 
 
      <section>
-       <h4>RATE  h4 rate h4 </h4>
-       <!-- <h3> there supposed to be a header after section</h3> -->
-          <article>
-
-               <h3>   head 3  </h3>
-                  <p> Lorem Ipsum is simply dummy text of the printing
-                    and typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown printer
-                     took a galley of type and scrambled it to make a type specimen book.
-                 </p>
-          </article>
+           <article>
+           <h5>
 
 
-          <article>
-          <h5>
-          Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the industry's
-            standard dummy text ever since the 1500s, when an unknown printer
-             took a galley of type and scrambled it to make a type specimen book
 
-           &mdash; erlbuenbrazo
             </h5>
            </article>
 
-          <article>
-                      <h3>KITTIES RATES RATES in head3</h3>
-                        <p>
-                        kitties rates kitties rateskitties rateskitties rates
-                        kitties rates kitties rateskitties rateskitties rates
-                        </p>
 
-                        <p>
-                        </p>
-
-                       <p>kitties rates kitties rateskitties rateskitties ratesal
-                         kitties rates kitties rateskitties rateskitties rates
-                         kitties rates kitties rateskitties rateskitties rates
-                         kitties rates kitties rateskitties rateskitties rates
-                         kitties rates kitties rateskitties rateskitties rates
-                       </p>
-
-          </article>
 
       </section>
 
-<h4>head 4</h4>
-      <sidebar>
+
+    <!-- <sidebar>
             <article>
               <h4>CATS IN THE NEWS</h4>
               <p>
@@ -95,17 +114,18 @@
               <a  href="#" target="_blank">Book Now >></a>
               </article>
 
-       </sidebar>
+       </sidebar>  */
 
-
+-->
+</body>
 
       <footer class="flip">
-      <img src="IMAGES/lesson04-mock5-cat-logo.png"  alt="cat logo"  class="center">
+  <!--    <img src="IMAGES/lesson04-mock3-sidebar-cat.jpg"  alt="cat logo"  class="center">-->
 
 
-        <p>|assignment no5| erlbuenbrazo</p>
+
+        <p>|assignment no5 External Fonts, AWESOME Fonts, Flexbox|  &mdash; erlbuenbrazo</p>
       </footer>
-
 
 
 </html>
