--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -1,17 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <title>Lesson05-assignment.HTML</title>
+     <meta charset="utf-8">
+     <title>Lesson05-assignment.HTML</title>
+     <link rel="stylesheet" type="text/css" href="STYLES/no5-Styles-mock.css">
+ </head>
 
+<body>
 
-     <link rel="stylesheet" type="text/css" href="STYLES/styles-mock.css">
-
-
-     </head>
     <header>
             <h1>EXTERNAL FONTS</h1>
-            <h3>Assignment no. 5</h3>
+            <h2>Assignment no. 5</h2>
     </header>
           <nav>
             <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>
@@ -21,47 +20,55 @@
             <a href="#" target="_blank">Book a Dog   /</a>
           </nav>
 
-
-<body>
-
-
-  <section class="container">
+ <section class="container">
 
     <br>
 
     <div class="box">
-      <h1>One </h1>
-      <p> Lorem Ipsum is simply dummy text of the printing
-        and typesetting industry. Lorem Ipsum has been the industry's
-        <a  href="#" target="_blank">Book Now >></a>
-      </p>
 
-    </div>
-
-    <div class="box">
-        <h1>Two </h1>
-        <p> Lorem Ipsum is simply dummy text of the printing
-          and typesetting industry. Lorem Ipsum has been the industry's
-          Lorem Ipsum is simply dummy text of the printing
-          Lorem Ipsum is simply dummy text of the printing
-          <a  href="#" target="_blank">Book Now >></a>
-          </article>
-    </div>
-
-    <div class="box">
-        <h1>Three </h1>
-        <p> Lorem Ipsum is simply dummy text of the printing
-          and typesetting industry. Lorem Ipsum has been the industry's
-          Lorem Ipsum is simply dummy text of the printing
-          Lorem Ipsum is simply dummy text of the printing
-          <a  href="#" target="_blank">Book Now >></a>
-          </article>
-
-    </div>
-
-    <div class="box">
-        <h1>Four </h1>
         <article>
+          <h2>One </h2>
+        <p> Lorem Ipsum is simply dummy text of the printing
+            and typesetting industry. Lorem Ipsum has been the industry's
+        </p>
+        <a  href="#" target="_blank">Book Now >></a>
+      </article>
+
+
+    </div>
+
+    <div class="box">
+        <article>
+        <h2>Two </h2>
+
+        <p> Lorem Ipsum is simply dummy text of the printing
+          and typesetting industry. Lorem Ipsum has been the industry's
+          Lorem Ipsum is simply dummy text of the printing
+          Lorem Ipsum is simply dummy text of the printing
+        </p>
+          <a  href="#" target="_blank">Book Now >></a>
+        </article>
+
+    </div>
+
+    <div class="box">
+         <article>
+        <h2>Three </h2>
+
+        <p> Lorem Ipsum is simply dummy text of the printing
+          and typesetting industry. Lorem Ipsum has been the industry's
+          Lorem Ipsum is simply dummy text of the printing
+          Lorem Ipsum is simply dummy text of the printing
+        </p>
+          <a  href="#" target="_blank">Book Now >></a>
+          </article>
+
+    </div>
+
+    <div class="box">
+         <article>
+        <h2>Four </h2>
+
           <h4>DOG OF THE WEEK</h4>
           <img src="IMAGES/about-us-two-dogs.jpg" style="width:80px;height:80px;border:0 alt="about Miko& PUggy" />
           <p> Lorem Ipsum is simply dummy text of the printing
@@ -117,7 +124,7 @@
        </sidebar>  */
 
 -->
-</body>
+
 
       <footer class="flip">
   <!--    <img src="IMAGES/lesson04-mock3-sidebar-cat.jpg"  alt="cat logo"  class="center">-->
