update file to ready with Font external

--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -20,10 +21,10 @@
             <a href="#" target="_blank">Book a Dog   /</a>
           </nav>
 
- <section class="container">
+ <!--<section class="container"> -->
 
     <br>
-
+<section class="container">
     <div class="box">
 
         <article>
@@ -70,7 +71,7 @@
         <h2>Four </h2>
 
           <h4>DOG OF THE WEEK</h4>
-          <img src="IMAGES/about-us-two-dogs.jpg" style="width:80px;height:80px;border:0 alt="about Miko& PUggy" />
+          <img src="IMAGES/about-us-two-dogs.jpg" style="width:80px; height:80px; border:0; alt="miko-Puggy">
           <p> Lorem Ipsum is simply dummy text of the printing
             and typesetting industry. Lorem Ipsum has been the industry's
           </p>
@@ -79,25 +80,13 @@
 
     </div>
 
+</section>
 
 
 
-  </section>
 
 
 
-     <section>
-           <article>
-           <h5>
-
-
-
-            </h5>
-           </article>
-
-
-
-      </section>
 
 
     <!-- <sidebar>
@@ -124,6 +113,7 @@
        </sidebar>  */
 
 -->
+</body>
 
 
       <footer class="flip">
