update file html with external google font

--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -20,23 +20,37 @@
             <a href="#" target="_blank">Doggies Profiles   /</a>
             <a href="#" target="_blank">Book a Dog   /</a>
           </nav>
+     <style>
+       @import url('https://fonts.googleapis.com/css?family=Satisfy');
 
- <!--<section class="container"> -->
+       header >h1{
+         font-family: Satisfy;
+         font-weight: 700;
+       }
+         main >p {
+           font-family: sans-serif;
+         }
+        article > p{
+          font-family: satisfy;
+        }
+      </style>
 
+
+    }
+
+<body>
     <br>
-<section class="container">
-    <div class="box">
-
-        <article>
+<div class="container">
+<div class="box">
+    <article>
           <h2>One </h2>
-        <p> Lorem Ipsum is simply dummy text of the printing
+          <p> Lorem Ipsum is simply dummy text of the printing
             and typesetting industry. Lorem Ipsum has been the industry's
-        </p>
-        <a  href="#" target="_blank">Book Now >></a>
+          </p>
+          <a  href="#" target="_blank">Book Now >></a>
       </article>
 
-
-    </div>
+</div>
 
     <div class="box">
         <article>
@@ -71,48 +85,23 @@
         <h2>Four </h2>
 
           <h4>DOG OF THE WEEK</h4>
-          <img src="IMAGES/about-us-two-dogs.jpg" style="width:80px; height:80px; border:0; alt="miko-Puggy">
+          <img src="IMAGES/about-us-two-dogs.jpg" style= width:80px; height:80px;   border:2; alt="dog-jpg" >
           <p> Lorem Ipsum is simply dummy text of the printing
             and typesetting industry. Lorem Ipsum has been the industry's
+            Lorem Ipsum is simply dummy text of the printing
           </p>
-          <a  href="#" target="_blank">Book Now >></a>
+            <a  href="#" target="_blank">Book Now >></a>
+
           </article>
 
     </div>
 
-</section>
+</div
+
+<!--styling fonts internal-->
 
 
 
-
-
-
-
-
-    <!-- <sidebar>
-            <article>
-              <h4>CATS IN THE NEWS</h4>
-              <p>
-                Cat buddies have no litter i live in luxury cat life.
-              </p>
-               <a  href="#" target="_blank">Find out more >></a>
-
-           <p>   rro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."
-                 "There is no one who loves pain itself, who seeks afte.
-           </p>
-
-              <a  href="#" target="_blank">Find out more >></a>
-
-              <h4>CAT OF THE WEEK</h4>
-              <img src="IMAGES/lesson04-mock3-sidebar-cat.jpg" alt="Cute Gray kitten" />
-
-
-              <a  href="#" target="_blank">Book Now >></a>
-              </article>
-
-       </sidebar>  */
-
--->
 </body>
 
 
