update family font with default font serif

--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -24,14 +24,14 @@
        @import url('https://fonts.googleapis.com/css?family=Satisfy');
 
        header >h1{
-         font-family: Satisfy;
+         font-family: Satisfy, serif;
          font-weight: 700;
        }
          main >p {
            font-family: sans-serif;
          }
         article > p{
-          font-family: satisfy;
+          font-family: satisfy, serif;
         }
       </style>
 
