update the html file with FONTAWESOME

--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -4,35 +4,36 @@
   <head>
      <meta charset="utf-8">
      <title>Lesson05-assignment.HTML</title>
+
+     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
+
+
      <link rel="stylesheet" type="text/css" href="STYLES/no5-Styles-mock.css">
  </head>
 
 <body>
 
     <header>
-            <h1>EXTERNAL FONTS</h1>
+
+
+            <h1>EXTERNAL FONTS
+            <i class="fas fa-dog"></i>
+            </h1>
+
+
             <h2>Assignment no. 5</h2>
     </header>
           <nav>
             <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>
             <a href="#" target="_blank">Rates  /</a>
-            <a href="#" target="_blank">Liabiliity Release   /</a>
+            <a href="#" target="_blank">Liability Release   /</a>
             <a href="#" target="_blank">Doggies Profiles   /</a>
             <a href="#" target="_blank">Book a Dog   /</a>
           </nav>
      <style>
-       @import url('https://fonts.googleapis.com/css?family=Satisfy');
 
-       header >h1{
-         font-family: Satisfy, serif;
-         font-weight: 700;
-       }
-         main >p {
-           font-family: sans-serif;
-         }
-        article > p{
-          font-family: satisfy, serif;
-        }
       </style>
 
 
@@ -40,12 +41,14 @@
 
 <body>
     <br>
-<div class="container">
+<div class="container">s
 <div class="box">
     <article>
-          <h2>One </h2>
-          <p> Lorem Ipsum is simply dummy text of the printing
-            and typesetting industry. Lorem Ipsum has been the industry's
+          <h2>One
+            <i class="fas fa-paw"></i>
+
+            </h2>
+          <p> https://fonts.googleapis.com/css?family=Satisfy
           </p>
           <a  href="#" target="_blank">Book Now >></a>
       </article>
