--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -37,11 +37,10 @@
       </style>
 
 
-    }
 
 <body>
     <br>
-<div class="container">s
+<div class="container">
 <div class="box">
     <article>
           <h2>One
