final validator run is NO ERRORS to show

--- a/lesson05-assignment.html
+++ b/lesson05-assignment.html
@@ -32,13 +32,12 @@
             <a href="#" target="_blank">Doggies Profiles   /</a>
             <a href="#" target="_blank">Book a Dog   /</a>
           </nav>
-     <style>
+    <!-- <style>
+    </style>
+  -->
 
-      </style>
-
-
-
-<body>
+<!--<body>
+-->
     <br>
 <div class="container">
 <div class="box">
@@ -87,7 +86,12 @@
         <h2>Four </h2>
 
           <h4>DOG OF THE WEEK</h4>
-          <img src="IMAGES/about-us-two-dogs.jpg" style= width:80px; height:80px;   border:2; alt="dog-jpg" >
+
+      <!--    <img src="IMAGES/about-us-two-dogs.jpg" style= width:80px  height:80px    border:2rem alt="dog-jpg" >
+      -->
+
+      <img src="IMAGES/about-us-two-dogs.jpg" style="width:100px;height:100px;"   alt="dog-jpg" >
+
           <p> Lorem Ipsum is simply dummy text of the printing
             and typesetting industry. Lorem Ipsum has been the industry's
             Lorem Ipsum is simply dummy text of the printing
@@ -97,23 +101,15 @@
           </article>
 
     </div>
+</div>
 
-</div
-
-<!--styling fonts internal-->
-
-
+<footer class="flip">
+  <p>|assignment no5|  GOOGLE Fonts, AWESOME Fonts, Flexbox|  &mdash; erlbuenbrazo</p>
+</footer>
 
 </body>
 
 
-      <footer class="flip">
-  <!--    <img src="IMAGES/lesson04-mock3-sidebar-cat.jpg"  alt="cat logo"  class="center">-->
-
-
-
-        <p>|assignment no5 External Fonts, AWESOME Fonts, Flexbox|  &mdash; erlbuenbrazo</p>
-      </footer>
 
 
 </html>
