aside text update color

--- a/pseudo-selectors.html
+++ b/pseudo-selectors.html
@@ -4,7 +4,20 @@
     <meta charset="utf-8">
     <title>selector practice</title>
     <style>
-      p::first-letter {font-size:200; }
+      p::first-letter {font-size:200%; }
+      footer a:hover {
+        color: green;
+        font-size:150%;
+        font-family:"Helvetica Neue", "Arial", sans-serif;
+        font-style:italic;
+        letter-spacing:3 px;
+      {
+      aside a {
+          text-decoration: none;
+          color: green;
+        }
+
+
     </style>
   </head>
 
