update instructors html files

--- a/lesson07/instructors.html
+++ b/lesson07/instructors.html
@@ -8,6 +8,7 @@
       <!-- <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>*-->
         <a href="#" target="_blank">ABOUT US  /</a>
         <a href="#" target="_blank"> CLASSES   /</a>
+        <a href="Special-events.html" target="_blank">SPECIAL EVENTS   /</a>
         <a href="#" target="_blank">INSTRUCTORS   /</a>
         <a href="#" target="_blank">EMAIL US   /</a>
       </nav>
