--- a/lesson07/class-sched.html
+++ b/lesson07/class-sched.html
@@ -10,9 +10,14 @@
     <nav>
     <!-- <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>*-->
       <a href="#" target="_blank">ABOUT US  /</a>
-      <a href="#" target="_blank"> CLASSES   /</a>
+      <a href="#" target="_blank"> CLASSES & SPECIAL EVENTS  /</a>
       <a href="Special-events.html" target="_blank">SPECIAL EVENTS   /</a>
       <a href="instructors.html" target="_blank">INSTRUCTORS   /</a>
       <a href="#" target="_blank">EMAIL US   /</a>
     </nav>
   </head>
+  <body>
+<img src="07-images/Schedule-photo.jpg"  alt="Archery Schedule " class="center">
+
+  </body>
+</html>
