update nav links

--- a/lesson07/index.html
+++ b/lesson07/index.html
@@ -10,12 +10,12 @@
 
     <nav>
     <!-- <a href="Lesson05-assignment.html" target="Lesson05-assignment.html">About   /</a>*-->
-      <a href="#" target="_blank">ABOUT US  /</a>
+      <a href="index.html" target="index.html">ABOUT US  /</a>
 
-      <a href="class-sched.html" target="_blank">CLASSES   /</a>
-      <a href="Special-events.html" target="_blank">SPECIAL EVENTS   /</a>
-      <a href="instructors.html" target="_blank">INSTRUCTORS   /</a>
-      <a href="#" target="_blank">EMAIL US   /</a>
+      <a href="class-sched.html" target="class-sched">CLASSES & SPECIAL EVENTS  /</a>
+  
+      <a href="instructors.html" target="instructors.html">INSTRUCTORS   /</a>
+      <a href="email-us.html" target="email-us.html">EMAIL US   /</a>
     </nav>
   </head>
 
